--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 <body>
 <p>He bag Kay nay var click khela nasn tar tya var karun ya Go back cha option var click karun ani samj tya var jaun itha ale asn tar Done var click kar</p>
 <pre></pre>
-<button class="button"><a href="">Go back</a></button>
+<button class="button"><a href="https://myselfdoone.github.io/ook/">Go back</a></button>
 <button class="button"><a href="https://www.instagram.com/p/Cq7K9a6olym/?igsh=MXBndW55dTRuY3F6bg==">Done</a></button>
 </body>
 
